# sentinel-triage

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: labeled_auth_events.csv
scripts/: generate_dataset.py  ingest_and_triage.py  run_eval.py
sigma_rules/: account_lockout_burst.yml  brute_force_login.yml  impossible_travel.yml  privilege_escalation_after_failures.yml
src/sentinel_triage/: __init__.py  events.py  pipeline.py
src/sentinel_triage/correlation/: __init__.py  entity_clustering.py
src/sentinel_triage/detection/: __init__.py  sigma_engine.py
src/sentinel_triage/eval/: __init__.py  harness.py
src/sentinel_triage/ingestion/: __init__.py  loader.py  opensearch_client.py  stream.py
src/sentinel_triage/review_queue/: __init__.py  queue.py
src/sentinel_triage/triage/: __init__.py  llm_client.py  summarizer.py
tests/: conftest.py  test_correlation.py  test_eval_harness.py  test_ingestion.py  test_llm_client.py  test_pipeline_integration.py  test_review_queue.py  test_sigma_engine.py
