[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-triage"
version = "0.1.0"
description = "SOC alert-fatigue reduction prototype: correlation + Sigma/MITRE detection + LLM triage with citation grounding + analyst review queue."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
server = [
    "opensearch-py>=2.4",
    "redis>=5.0",
]
llm = [
    "openai>=1.30",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Docker/OpenSearch/Redis or a real LLM API key; skipped by default",
]
addopts = "-m 'not integration'"
